Bug 702954: Fix 'bad clist operation'.

When reading bytes from the clist, we calculate the number of bytes
left in the memory stream, and clip the number of requested bytes
to this value (so we don't overread).

Unfortunately, we were calculating the number of bytes left in a
32 bit int, so if are (say) exactly 4Gig from the end of the stream,
we think we have 0 bytes left.